<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textStyle="bold"
            tools:text="@string/nama_menu" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_menu"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_item_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:ellipsize="end"
            android:maxLines="3"
            tools:text="@string/detail_menu"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/keterangan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/keterangan"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="16dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="18dp">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:textSize="16sp"
                        android:text="@string/harga"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/harga_values"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="16sp"
                        tools:text="@string/harga_values"
                        android:textColor="@color/black"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/rating"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/rating_values"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        tools:text="@string/rating_values" />
                </TableRow>
            </TableLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:padding="10dp">

            <Button
                android:id="@+id/btn_set_favorite"
                android:textColor="@color/black"
                android:text="@string/favorite"
                android:textSize="25sp"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:layout_margin="10dp"/>


            <Button
                android:id="@+id/btn_set_beli"
                android:textColor="@color/black"
                android:layout_margin="10dp"
                android:text="@string/beli"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                />
        </LinearLayout>

    </LinearLayout>

</ScrollView>